<resources>
    <string name="app_name">Healthmine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title_activities">Visualization</string>
    <string name="menu_title_self_report">Self Report</string>
    <string name="menu_title_setting">Settings</string>

    <!--    menus strings-->
    <string name="menu_home">Activity</string>
    <string name="menu_cgm">CGM</string>
    <string name="menu_self_report">Self Report</string>
    <string name="menu_settings">Setting</string>
    <string name="menu_feedback">Feedback</string>

    <!--    self report strings-->
    <string name="self_report_first_question">Have there been recent changes to your diet?</string>
    <string name="self_report_second_question">Please Rate your Health</string>
    <string name="self_report_third_question">Additional information about health</string>
    <string name="self_report_fourth_question">Have there been recent changes to your medication?</string>
    <string name="self_report_fifth_question">Please specify any other lifestyle changes</string>

    <!--spinner selection items in self report page-->
    <string-array name="self_report_spinner_items">
        <item>Good</item>
        <item>OK</item>
        <item>Sick</item>
        <item>Very sick</item>
    </string-array>

    <!--    setting strings-->
    <string name="setting_activity_permission">Activity Recognition</string>
    <string name="setting_light_permission">Sleep Recognition</string>
    <string name="setting_dexcom_permission">Dexcom Authorization</string>
    <string name="setting_dexcom_sub_permission">Redirect to Dexcom Portal for Authorization to access your Dexcom Data</string>

    <!--    Activity Recognition Service strings-->
    <string name="Healthmine">Activity Recognition</string>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_running">Running</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>